Add card component.

--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,5 @@
     <link rel="stylesheet" href="sass/main.scss" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, nemo
-      dolorum, exercitationem quae velit obcaecati autem accusantium perferendis
-      amet voluptas sed enim, dolore aut sunt tempore quod! Voluptatibus, quidem
-      veniam!
-    </p>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-      voluptas deserunt, eius nisi placeat voluptatem quam mollitia soluta
-      suscipit non.
-    </p>
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-      voluptatibus, repellat perferendis inventore debitis vero rerum.
-      Aspernatur distinctio quibusdam illum et delectus laborum, iste explicabo
-      mollitia odio libero deleniti eveniet.
-    </p>
-  </body>
+  <body></body>
 </html>
