--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,7 @@
     <link rel="stylesheet" href="sass/main.scss" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script defer src="./js/index.js"></script>
+  </body>
 </html>
