--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,61 @@
     <title>Document</title>
   </head>
   <body>
+    <article class="card card-preview">
+      <img
+        class="card-preview__img"
+        src="./images/drawers.jpg"
+        alt="Beautiful green drawer with vase."
+      />
+      <div class="card-preview__content">
+        <div class="card-preview__body">
+          <h2 class="card-preview__heading">
+            Shift the overall look and feel by adding these wonderful touches to
+            furniture in your home.
+          </h2>
+          <p>
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I've got some simple tips to hel
+            you make any room feel complete.
+          </p>
+        </div>
+        <div class="tooltip-container">
+          <div class="media">
+            <div class="media__img">
+              <img
+                src="./images/avatar-michelle.jpg"
+                alt="A picture of happy client."
+              />
+            </div>
+            <div class="media__content">
+              <h3 class="media__title">Michelle Appleton</h3>
+              <p class="media__subtitle">28 Jun 2020</p>
+            </div>
+          </div>
+          <div class="tooltip">
+            <div class="tooltip__body">
+              <ul class="tooltip__list">
+                <li class="tooltip__item">
+                  <a href="#" class="tooltip__link tooltip__text">Share</a>
+                </li>
+                <li class="tooltip__item">
+                  <a href="#" class="tooltip__link fab fa-facebook-f"></a>
+                </li>
+                <li class="tooltip__item">
+                  <a href="#" class="tooltip__link fab fa-twitter"></a>
+                </li>
+                <li class="tooltip__item">
+                  <a href="#" class="tooltip__link fab fa-pinterest"></a>
+                </li>
+              </ul>
+            </div>
+            <button class="tooltip__icon">
+              <i class="fas fa-share"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </article>
     <script defer src="./js/index.js"></script>
   </body>
 </html>
